remove node_modules

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 # testing
 /coverage
 /Clase 4- Componentes I/ejemplos/node_modules
+/Complementaria II - Events, Context/ejemplos/node_modules
 # production
 /build
 
