--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 /coverage
 /Clase 4- Componentes I/ejemplos/node_modules
 /Complementaria II - Events, Context/ejemplos/node_modules
+/Clase 11 - Firebase I/ejemplos/node_modules
 # production
 /build
 
